# planguard-cli-oss

./: .dockerignore  .gitignore  Dockerfile  README.md  plan.json  pyproject.toml
.github/workflows/: policycheck.yml  publish-ghcr.yml  release.yml
controls/packs/baseline/: README.md  pack.yaml
controls/packs/baseline/rules/: cloudtrail.rego  iam.rego  rds.rego  s3.rego  security_groups.rego
controls/packs/soc2-prod/: pack.yaml
controls/packs/soc2-prod/rules/: cloudtrail.rego  helpers.rego  log_retention.rego  tls_alb.rego
src/policycheck/: api.py  cli.py  evaluator.py  pack.py  report.py
src/policycheck.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
